  See the manual page for details.
  This functionality is also available via a new menu voice
  Export->Export As..., that pops up a dialog allowing one to
  choose the export format, as well as the destination pathname.
  Also, it is available via the mini-buffer (or the -x switch)
  through a proper new LFUN (see below).


The following pref variables were changed in 2.0:

The following pref variables are obsoleted in 2.0:

- \\default_papersize

The following new LyX functions have been introduced:

- LFUN_BUFFER_EXPORT_AS <format> <filename>
  Equivalent to the new -export-to command-line switch (see above).

- LFUN_CLIPBOARD_PASTE_SIMPLE ("clipboard-paste-simple")
  Paste the clipboard contents as simple unformatted text.
  This is also available through a new menu voice within the
  [Edit]->[Paste Special...] sub-menu.


The following LyX functions have been removed:

//template, remove this entry later on
- LFUN_NEXT_INSET_TOGGLE ("next-inset-toggle"): use "inset-toggle" instead.


The following LyX functions have been changed:

//template, remove this entry later on
- LFUN_INSET_TOGGLE ("inset-toggle"): For some insets, this function was used 
  to show the settings dialog. This is no longer possible and one should use
  inset-settings for this purpose.
 

The following LyX key bindings have been changed:

//template, remove this entry later on
- LFUN_MATH_MACRO_FOLD ("math-macro-fold")
  The binding to "C-minus" has changed to "C-S-underscore".


New external programs and libraries:
------------------------------------

-


Known issues in version 2.1.0
-----------------------------

- LyX needs to be run under Python 2 and will not work properly on systems
  where Python 3 is the default binary. See bug #7030 to know how to fix
  this properly, since simple sheebang conversion in *.py files will not
  be enough.

Caveats when upgrading from earlier versions to 2.1.x
-------------------------------------------------------
