@@ -22,7 +22,7 @@ SUBDIRS = config development intl po $(BOOST) src sourcedoc lib \
 EXTRA_DIST = ANNOUNCE INSTALL.autoconf RELEASE-NOTES UPGRADING \
 	INSTALL.Win32 INSTALL.MacOSX INSTALL.scons INSTALL.cmake \
 	README.Win32 README.Cygwin README.localization lyx.1in \
-	autogen.sh lib/lyx.desktop
+	autogen.sh lib/lyx.desktop lib/images/lyx.svg
 
 man_MANS = lyx.1
 
