@@ -61,6 +61,10 @@ The following LyX key bindings have been changed:
   The binding to "C-minus" has changed to "C-S-underscore".
 
 
+Linux desktop file specification and scalable icon has been included
+into the tarball.
+
+
 New external programs and libraries:
 ------------------------------------
 
